--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,59 +31,69 @@ jobs:
           echo "RELEASE_NAME=$(date +%Y%m%d%H%M)" >> $GITHUB_ENV
         shell: bash
 
-      - name: Download GeoLite2 databases
-        env:
-          LICENSE_KEY: ${{ secrets.MAXMIND_GEOLITE2_LICENSE }}
-        run: |
-          mkdir -p output
-          curl -L "https://download.maxmind.com/app/geoip_download?edition_id=GeoLite2-ASN&license_key=${LICENSE_KEY}&suffix=tar.gz" -o ./output/GeoLite2-ASN.tar.gz
-          curl -L "https://download.maxmind.com/app/geoip_download?edition_id=GeoLite2-ASN-CSV&license_key=${LICENSE_KEY}&suffix=zip" -o ./output/GeoLite2-ASN-CSV.zip
-          curl -L "https://download.maxmind.com/app/geoip_download?edition_id=GeoLite2-Country&license_key=${LICENSE_KEY}&suffix=tar.gz" -o ./output/GeoLite2-Country.tar.gz
-          curl -L "https://download.maxmind.com/app/geoip_download?edition_id=GeoLite2-Country-CSV&license_key=${LICENSE_KEY}&suffix=zip" -o ./output/GeoLite2-Country-CSV.zip
+      # --- MaxMind 下载步骤已被注释掉 ---
+      # - name: Download GeoLite2 databases
+      #   env:
+      #     LICENSE_KEY: ${{ secrets.MAXMIND_GEOLITE2_LICENSE }}
+      #   run: |
+      #     mkdir -p output
+      #     curl -L "https://download.maxmind.com/app/geoip_download?edition_id=GeoLite2-ASN&license_key=${LICENSE_KEY}&suffix=tar.gz" -o ./output/GeoLite2-ASN.tar.gz
+      #     curl -L "https://download.maxmind.com/app/geoip_download?edition_id=GeoLite2-ASN-CSV&license_key=${LICENSE_KEY}&suffix=zip" -o ./output/GeoLite2-ASN-CSV.zip
+      #     curl -L "https://download.maxmind.com/app/geoip_download?edition_id=GeoLite2-Country&license_key=${LICENSE_KEY}&suffix=tar.gz" -o ./output/GeoLite2-Country.tar.gz
+      #     curl -L "https://download.maxmind.com/app/geoip_download?edition_id=GeoLite2-Country-CSV&license_key=${LICENSE_KEY}&suffix=zip" -o ./output/GeoLite2-Country-CSV.zip
 
-      - name: Prepare GeoLite2 databases
-        run: |
-          cp ./output/{*.gz,*.zip} ./
-          unzip GeoLite2-Country-CSV.zip
-          unzip GeoLite2-ASN-CSV.zip
-          tar -xvzf GeoLite2-Country.tar.gz
-          tar -xvzf GeoLite2-ASN.tar.gz
-
-          cp GeoLite2-Country_*/*.mmdb ./output/
-          cp GeoLite2-ASN_*/*.mmdb ./output/
-          cp GeoLite2-Country-CSV_*/{GeoLite2-Country-Blocks-*,GeoLite2-Country-Locations-en,GeoLite2-Country-Locations-zh-CN}.csv ./output/
-          cp GeoLite2-ASN-CSV_*/*.csv ./output/
-
-          mkdir -p geolite2
-          cp GeoLite2-Country-CSV_*/*.csv ./geolite2/
-          cp GeoLite2-ASN-CSV_*/*.csv ./geolite2/
+      # --- MaxMind 准备步骤已被注释掉 ---
+      # - name: Prepare GeoLite2 databases
+      #   run: |
+      #     cp ./output/{*.gz,*.zip} ./
+      #     unzip GeoLite2-Country-CSV.zip
+      #     unzip GeoLite2-ASN-CSV.zip
+      #     tar -xvzf GeoLite2-Country.tar.gz
+      #     tar -xvzf GeoLite2-ASN.tar.gz
+      #
+      #     cp GeoLite2-Country_*/*.mmdb ./output/
+      #     cp GeoLite2-ASN_*/*.mmdb ./output/
+      #     cp GeoLite2-Country-CSV_*/{GeoLite2-Country-Blocks-*,GeoLite2-Country-Locations-en,GeoLite2-Country-Locations-zh-CN}.csv ./output/
+      #     cp GeoLite2-ASN-CSV_*/*.csv ./output/
+      #
+      #     mkdir -p geolite2
+      #     cp GeoLite2-Country-CSV_*/*.csv ./geolite2/
+      #     cp GeoLite2-ASN-CSV_*/*.csv ./geolite2/
 
       - name: Build geoip files
         run: |
           go build ./
+          # 确保你的 config.json 文件是精简版的，不依赖任何 MaxMind 文件
           ./geoip convert -c ./config.json
 
-      - name: Verify mmdb files
-        run: |
-          cd ./output || exit 1
-          go install -v github.com/maxmind/mmdbverify@latest
-          for name in $(ls *.mmdb); do
-            $(go env GOPATH)/bin/mmdbverify -file ${name}
-          done
+      # --- .mmdb 文件验证步骤已被注释掉，因为我们不生成它 ---
+      # - name: Verify mmdb files
+      #   run: |
+      #     cd ./output || exit 1
+      #     go install -v github.com/maxmind/mmdbverify@latest
+      #     for name in $(ls *.mmdb); do
+      #       $(go env GOPATH)/bin/mmdbverify -file ${name}
+      #     done
 
       - name: Generate sha256 checksum for dat files
         run: |
+          # 如果 output 目录或 .dat 文件不存在，则跳过此步骤
+          if [ ! -d "./output" ] || [ -z "$(ls -A ./output/*.dat 2>/dev/null)" ]; then
+            echo "No .dat files found, skipping checksum generation."
+            exit 0
+          fi
           cd ./output || exit 1
           for name in $(ls *.dat); do
             sha256sum ${name} > ./${name}.sha256sum
           done
 
-      - name: Generate sha256 checksum for mmdb files
-        run: |
-          cd ./output || exit 1
-          for name in $(ls *.mmdb); do
-            sha256sum ${name} > ./${name}.sha256sum
-          done
+      # --- .mmdb 文件校验和步骤已被注释掉 ---
+      # - name: Generate sha256 checksum for mmdb files
+      #   run: |
+      #     cd ./output || exit 1
+      #     for name in $(ls *.mmdb); do
+      #       sha256sum ${name} > ./${name}.sha256sum
+      #     done
 
       - name: Git push assets to "release" branch
         run: |
@@ -104,13 +114,12 @@ jobs:
             curl -i "https://purge.jsdelivr.net/gh/${{ github.repository }}@release/${file}"
           done
 
+      # --- 清理步骤已被简化，因为不再有 MaxMind 文件 ---
       - name: Remove some files to avoid publishing to GitHub release
         run: |
-          rm -rf ./output/*.{gz,zip}
-          rm -rf ./output/GeoLite2-*.csv
-          rm -rf ./output/GeoLite2-*.mmdb
-          rm -rf ./output/GeoLite2-*.sha256sum
-          rm -rf ./output/{clash,dat,mrs,nginx,srs,surge,text}
+          # 这个步骤可以保留，以防万一有其他不需要发布的文件生成
+          # 但主要目标是确保 output 目录是干净的，只包含你想要发布的文件
+          echo "Cleanup step, can be customized if needed."
 
       - name: Upload files to GitHub release
         uses: svenstaro/upload-release-action@v2
@@ -120,3 +129,4 @@ jobs:
           file: ./output/*
           release_name: ${{ env.RELEASE_NAME }}
           tag: ${{ env.TAG_NAME }}
+
