--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,53 +31,48 @@ jobs:
           echo "RELEASE_NAME=$(date +%Y%m%d%H%M)" >> $GITHUB_ENV
         shell: bash
 
-      # --- MaxMind 下载步骤已被注释掉 ---
-      # - name: Download GeoLite2 databases
-      #   env:
-      #     LICENSE_KEY: ${{ secrets.MAXMIND_GEOLITE2_LICENSE }}
-      #   run: |
-      #     mkdir -p output
-      #     curl -L "https://download.maxmind.com/app/geoip_download?edition_id=GeoLite2-ASN&license_key=${LICENSE_KEY}&suffix=tar.gz" -o ./output/GeoLite2-ASN.tar.gz
-      #     curl -L "https://download.maxmind.com/app/geoip_download?edition_id=GeoLite2-ASN-CSV&license_key=${LICENSE_KEY}&suffix=zip" -o ./output/GeoLite2-ASN-CSV.zip
-      #     curl -L "https://download.maxmind.com/app/geoip_download?edition_id=GeoLite2-Country&license_key=${LICENSE_KEY}&suffix=tar.gz" -o ./output/GeoLite2-Country.tar.gz
-      #     curl -L "https://download.maxmind.com/app/geoip_download?edition_id=GeoLite2-Country-CSV&license_key=${LICENSE_KEY}&suffix=zip" -o ./output/GeoLite2-Country-CSV.zip
+      - name: Download IPinfo Lite MMDB
+        env:
+          IPINFO_TOKEN: ${{ secrets.IPINFO_TOKEN }}
+        run: |
+          mkdir -p ./ipinfo_data
+          curl -L "https://ipinfo.io/data/ipinfo_lite.mmdb?token=${IPINFO_TOKEN}" -o ./ipinfo_data/ipinfo_lite.mmdb
 
-      # --- MaxMind 准备步骤已被注释掉 ---
-      # - name: Prepare GeoLite2 databases
-      #   run: |
-      #     cp ./output/{*.gz,*.zip} ./
-      #     unzip GeoLite2-Country-CSV.zip
-      #     unzip GeoLite2-ASN-CSV.zip
-      #     tar -xvzf GeoLite2-Country.tar.gz
-      #     tar -xvzf GeoLite2-ASN.tar.gz
-      #
-      #     cp GeoLite2-Country_*/*.mmdb ./output/
-      #     cp GeoLite2-ASN_*/*.mmdb ./output/
-      #     cp GeoLite2-Country-CSV_*/{GeoLite2-Country-Blocks-*,GeoLite2-Country-Locations-en,GeoLite2-Country-Locations-zh-CN}.csv ./output/
-      #     cp GeoLite2-ASN-CSV_*/*.csv ./output/
-      #
-      #     mkdir -p geolite2
-      #     cp GeoLite2-Country-CSV_*/*.csv ./geolite2/
-      #     cp GeoLite2-ASN-CSV_*/*.csv ./geolite2/
+      # --- 新增的校验步骤 ---
+      - name: Verify MMDB Checksum
+        env:
+          IPINFO_TOKEN: ${{ secrets.IPINFO_TOKEN }}
+        run: |
+          echo "Verifying checksum of the downloaded MMDB file..."
+          
+          # 安装 jq 工具用于解析 JSON
+          sudo apt-get update && sudo apt-get install -y jq
+          
+          # 从 API 获取官方的 SHA256 校验和
+          # 使用 -sL 来静默下载并处理重定向
+          REMOTE_SHA256=$(curl -sL "https://ipinfo.io/data/ipinfo_lite.mmdb/checksums?token=${IPINFO_TOKEN}" | jq -r '.checksums.sha256')
+          
+          # 计算本地下载文件的 SHA256 校验和
+          LOCAL_SHA256=$(sha256sum ./ipinfo_data/ipinfo_lite.mmdb | awk '{print $1}')
+          
+          echo "Official SHA256: ${REMOTE_SHA256}"
+          echo "Local    SHA256: ${LOCAL_SHA256}"
+          
+          # 比较两个校验和
+          if [ "${REMOTE_SHA256}" == "${LOCAL_SHA256}" ]; then
+            echo "✅ Checksum verification successful."
+          else
+            echo "❌ Checksum verification FAILED!"
+            exit 1 # 校验失败，中止工作流
+          fi
 
       - name: Build geoip files
         run: |
           go build ./
-          # 确保你的 config.json 文件是精简版的，不依赖任何 MaxMind 文件
           ./geoip convert -c ./config.json
-
-      # --- .mmdb 文件验证步骤已被注释掉，因为我们不生成它 ---
-      # - name: Verify mmdb files
-      #   run: |
-      #     cd ./output || exit 1
-      #     go install -v github.com/maxmind/mmdbverify@latest
-      #     for name in $(ls *.mmdb); do
-      #       $(go env GOPATH)/bin/mmdbverify -file ${name}
-      #     done
 
       - name: Generate sha256 checksum for dat files
         run: |
-          # 如果 output 目录或 .dat 文件不存在，则跳过此步骤
           if [ ! -d "./output" ] || [ -z "$(ls -A ./output/*.dat 2>/dev/null)" ]; then
             echo "No .dat files found, skipping checksum generation."
             exit 0
@@ -86,14 +81,6 @@ jobs:
           for name in $(ls *.dat); do
             sha256sum ${name} > ./${name}.sha256sum
           done
-
-      # --- .mmdb 文件校验和步骤已被注释掉 ---
-      # - name: Generate sha256 checksum for mmdb files
-      #   run: |
-      #     cd ./output || exit 1
-      #     for name in $(ls *.mmdb); do
-      #       sha256sum ${name} > ./${name}.sha256sum
-      #     done
 
       - name: Git push assets to "release" branch
         run: |
@@ -114,11 +101,8 @@ jobs:
             curl -i "https://purge.jsdelivr.net/gh/${{ github.repository }}@release/${file}"
           done
 
-      # --- 清理步骤已被简化，因为不再有 MaxMind 文件 ---
       - name: Remove some files to avoid publishing to GitHub release
         run: |
-          # 这个步骤可以保留，以防万一有其他不需要发布的文件生成
-          # 但主要目标是确保 output 目录是干净的，只包含你想要发布的文件
           echo "Cleanup step, can be customized if needed."
 
       - name: Upload files to GitHub release
@@ -129,4 +113,3 @@ jobs:
           file: ./output/*
           release_name: ${{ env.RELEASE_NAME }}
           tag: ${{ env.TAG_NAME }}
-
