--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,24 +1,19 @@
 # 工作流名称
 name: Build geoip files
-
+ 
 # 工作流触发条件
 on:
-  # 允许手动触发
   workflow_dispatch:
-  # 定时触发：每周四的 UTC 时间 0点0分 (北京时间上午8点)
   schedule:
     - cron: "0 0 * * 4"
-  # 当 master 分支有代码推送时触发
   push:
     branches:
       - master
-    # 忽略以下文件的变更，避免不必要的构建
     paths-ignore:
       - ".gitignore"
       - "LICENSE*"
       - "*.md"
-
-# 定义任务
+ 
 jobs:
   build:
     name: Build
@@ -28,22 +23,21 @@ jobs:
       - name: Checkout codebase
         uses: actions/checkout@v4
         with:
-          # 获取所有历史记录，以便 git 操作
           fetch-depth: 0
-
+ 
       # 步骤2：设置 Go 环境
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
           go-version-file: ./go.mod
-
-      # 步骤3：设置动态变量 (发布名称和标签)
+ 
+      # 步骤3：设置动态变量
       - name: Set variables
         run: |
           echo "TAG_NAME=$(date +%Y%m%d%H%M)" >> $GITHUB_ENV
           echo "RELEASE_NAME=Release ${{ env.TAG_NAME }}" >> $GITHUB_ENV
         shell: bash
-
+ 
       # 步骤4：下载 IPinfo 的 MMDB 数据库文件
       - name: Download IPinfo Lite MMDB
         env:
@@ -51,63 +45,74 @@ jobs:
         run: |
           mkdir -p ./ipinfo_data
           curl -fL "https://ipinfo.io/data/ipinfo_lite.mmdb?token=${IPINFO_TOKEN}" -o ./ipinfo_data/ipinfo_lite.mmdb
-
+ 
       # 步骤5：校验下载文件的 SHA256 值
       - name: Verify MMDB Checksum
         env:
           IPINFO_TOKEN: ${{ secrets.IPINFO_TOKEN }}
         run: |
-          echo "Verifying checksum of the downloaded MMDB file..."
-          # 安装 jq 工具用于解析 JSON
+          echo "Verifying checksum..."
           sudo apt-get update > /dev/null && sudo apt-get install -y jq
-          # 从 API 获取官方的 SHA256 校验和
           REMOTE_SHA256=$(curl -sL "https://ipinfo.io/data/ipinfo_lite.mmdb/checksums?token=${IPINFO_TOKEN}" | jq -r '.checksums.sha256')
-          # 计算本地下载文件的 SHA256 校验和
           LOCAL_SHA256=$(sha256sum ./ipinfo_data/ipinfo_lite.mmdb | awk '{print $1}')
-          
-          echo "Official SHA256: ${REMOTE_SHA256}"
-          echo "Local    SHA256: ${LOCAL_SHA256}"
-          
-          # 比较两个校验和，如果不一致则中止工作流
           if [ "${REMOTE_SHA256}" != "${LOCAL_SHA256}" ]; then
-            echo "❌ Checksum verification FAILED!"
-            exit 1
+            echo "❌ Checksum FAILED!" && exit 1
           fi
-          echo "✅ Checksum verification successful."
-
-      # 步骤6：编译并运行工具以生成 dat 文件
-      - name: Build and generate dat files
+          echo "✅ Checksum successful."
+ 
+      # --- 核心改动开始 ---
+ 
+      # 步骤6：安装 IPinfo 官方命令行工具 (CLI)
+      - name: Install IPinfo CLI
         run: |
-          go build ./
-          ./geoip convert -c ./config.json
-
-      # --- 核心优化点 ---
-      # 步骤7：检查是否成功生成了文件，并设置一个输出变量
-      - name: Check for generated files
-        id: check_files # 为此步骤设置一个 ID，方便后续引用
+          go install github.com/ipinfo/cli/ipinfo@latest
+          echo "$HOME/go/bin" >> $GITHUB_PATH
+ 
+      # 步骤7：从 MMDB 提取新加坡 (SG) 的 IP 地址段
+      - name: Extract SG IP Ranges from MMDB
+        id: extract_ips
         run: |
-          if [ -d "./output" ] && [ -n "$(ls -A ./output/*.dat 2>/dev/null)" ]; then
-            echo "✅ Found generated .dat files in ./output."
+          echo "Extracting SG IPv4 and IPv6 ranges using IPinfo CLI..."
+          # 使用 ipinfo cli 导出，通过 awk 筛选出 sg 的 country_code, 并提取第一列 (range)
+          # awk -F, '$3=="SG"{print $1}' 过滤国家代码为 SG 的行并打印 IP 段
+          ipinfo mmdb export ./ipinfo_data/ipinfo_lite.mmdb | awk -F, 'NR > 1 && $3=="SG" {print $1}' > ./sg_cidrs.txt
+          
+          # 检查是否成功生成了 cidr 文件且文件不为空
+          if [ -s ./sg_cidrs.txt ]; then
+            echo "✅ Successfully extracted $(wc -l < ./sg_cidrs.txt) IP ranges to sg_cidrs.txt."
             echo "has_files=true" >> $GITHUB_OUTPUT
           else
-            echo "⚠️ No .dat files were generated. Skipping subsequent steps."
+            echo "⚠️ Could not find any SG IP ranges in the MMDB. Skipping dat file generation."
             echo "has_files=false" >> $GITHUB_OUTPUT
           fi
-
-      # 步骤8：为生成的 dat 文件创建校验和
-      # 仅在 check_files 步骤的输出 has_files 为 'true' 时运行
+ 
+      # 步骤8：使用 v2fly/geoip 工具将文本IP列表转换为 dat 文件
+      # 仅在 extract_ips 步骤成功提取到 IP 时运行
+      - name: Generate dat file from text list
+        if: steps.extract_ips.outputs.has_files == 'true'
+        run: |
+          # 编译 v2fly/geoip 工具
+          go build ./
+          # 使用 include 指令来从文本文件加载 IP 列表，并将其标记为 "sg"
+          # 这是从文本生成带标签的 geoip.dat 的标准方法
+          ./geoip -dat-file ./sg_cidrs.txt -country-code sg -output-file ./output/geoip-sg.dat
+ 
+      # --- 核心改动结束 ---
+ 
+      # 步骤9：为生成的 dat 文件创建校验和
+      # 仅在成功提取到 IP 时运行
       - name: Generate sha256 checksum for dat files
-        if: steps.check_files.outputs.has_files == 'true'
+        if: steps.extract_ips.outputs.has_files == 'true'
         run: |
           cd ./output
           for name in $(ls *.dat); do
             sha256sum ${name} > ./${name}.sha256sum
           done
-
-      # 步骤9：将生成的产物推送到 release 分支
-      # 仅在 check_files 步骤的输出 has_files 为 'true' 时运行
+ 
+      # 步骤10：将生成的产物推送到 release 分支
+      # 仅在成功提取到 IP 时运行
       - name: Git push assets to "release" branch
-        if: steps.check_files.outputs.has_files == 'true'
+        if: steps.extract_ips.outputs.has_files == 'true'
         run: |
           cd output
           git init
@@ -118,21 +123,21 @@ jobs:
           git commit -m "Release: ${{ env.RELEASE_NAME }}"
           git remote add geoip "https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}"
           git push -f -u geoip release
-
-      # 步骤10：刷新 jsDelivr CDN 缓存
-      # 仅在 check_files 步骤的输出 has_files 为 'true' 时运行
+ 
+      # 步骤11：刷新 jsDelivr CDN 缓存
+      # 仅在成功提取到 IP 时运行
       - name: Purge jsdelivr CDN
-        if: steps.check_files.outputs.has_files == 'true'
+        if: steps.extract_ips.outputs.has_files == 'true'
         run: |
           cd output
           for file in $(ls); do
             curl -sL "https://purge.jsdelivr.net/gh/${{ github.repository }}@release/${file}"
           done
-
-      # 步骤11：上传产物到 GitHub Release
-      # 仅在 check_files 步骤的输出 has_files 为 'true' 时运行
+ 
+      # 步骤12：上传产物到 GitHub Release
+      # 仅在成功提取到 IP 时运行
       - name: Upload files to GitHub Release
-        if: steps.check_files.outputs.has_files == 'true'
+        if: steps.extract_ips.outputs.has_files == 'true'
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
