--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -98,11 +98,43 @@ jobs:
         run: |
           # 编译 v2fly/geoip 工具
           go build ./
+
+          # 动态创建 config.json 文件。这是 v2fly/geoip 工具唯一接受的输入方式。
+          # 这个配置告诉工具：
+          # 1. 定义一个名为 "custom_loader" 的自定义数据加载器。
+          # 2. 在这个加载器中，我们将标签 "sg" 指向我们刚刚生成的 sg_cidrs.txt 文件。
+          # 3. 创建一个任务，从 "custom_loader" 中提取带有 "sg" 标签的数据，并输出到 geoip-sg.dat。
+          cat <<EOF > config.json
+          {
+            "dat_loader": "custom_loader",
+            "dat_files": {
+              "custom_loader": {
+                "sg": "./sg_cidrs.txt"
+              }
+            },
+            "tasks": [
+              {
+                "output": "./output/geoip-sg.dat",
+                "wanted_list": [
+                  "sg"
+                ]
+              }
+            ]
+          }
+          EOF
+
+          # 打印一下配置文件内容，方便调试
+          echo "Generated config.json:"
+          cat config.json
+
+          # 创建输出目录，以防万一
+          mkdir -p ./output
           
-          # --- 最终修正的转换命令 ---
-          # 正确的语法是 ./geoip <子命令> [选项]
-          # 子命令是 'convert'
-          ./geoip convert -dat-file ./sg_cidrs.txt -country-code sg -output-file ./output/geoip-sg.dat
+          # 使用配置文件运行正确的转换命令
+          echo "Running geoip conversion with config file..."
+          ./geoip convert -c ./config.json
+          echo "Conversion completed successfully!"
+
  
       # --- 核心改动结束 ---
  
